Added paragraph and h1 tags for main element

--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title></title>
+<title>My Website</title>
 </head>
+
 <body>
+
+  <main>
+    <h1>This is the first heading</h1>
+    <p>Here is some text for a paragraph</p>
+  </main>
 
 </body>
 
