--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <main>
     <h1>This is the first heading</h1>
     <p>Here is some text for a paragraph</p>
+
+    <article>
+      <h2>Here is my second heading</h2>
+      <p>Here is some additional text for this article</p>
+    </article>
   </main>
 
 </body>
