added 3 paragraphs on pizza

--- a/about.html
+++ b/about.html
@@ -9,7 +9,10 @@
   <main>
     <h1>All About RedBeard</h1>
     <p>Here is some text for a paragraph</p>
-     <p>another paragraph</p>
+    <h2>3 reason why I like Pizza</h2>
+     <p>1st paragraph</p>
+     <p>2nd paragraph</p>
+     <p>3rd paragraph</p>
 
     <article>
       <h2>What I do with my freetime</h2>
