added header section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 </head>
 
 <body>
+<header>
+<nav>
 
+</nav>
+
+</header>
   <main>
     <h1>This is the first heading</h1>
     <p>Here is some text for a paragraph</p>
